<resources>
    <string name="app_name">Instagram clone</string>

    <string name="from">from</string>
    <string name="todo">TODO</string>
    <string name="label">label</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create New Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="reels">Reels</string>
    <string name="profile">Profile</string>
    <string name="bio">Bio</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="add_reel">Add Reel</string>
    <string name="add_post">Add Post</string>
    <string name="_8734_meta">∞ Meta</string>
    <string name="upload_reel">Upload Reel</string>
</resources>